--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/scores">Live Scores</a></li>
-                <li><a href="/news">Sports News</a></li>
-                <li><a href="/players">Player Profiles</a></li>
-                <li><a href="/highlights">Match Highlights</a></li>
+                <li><a href="#live-scores">Live Scores</a></li>
+                <li><a href="#upcoming-events">Upcoming Events</a></li>
+                <li><a href="#past-results">Past Results</a></li>
             </ul>
         </nav>
     </header>
@@ -25,22 +24,22 @@
     <main>
         <section id="live-scores">
             <h2>Live Sports Scores</h2>
-            <div id="scores"></div> <!-- Scores will be inserted dynamically here -->
-        </section>
-
-        <section id="news">
-            <h2>Latest Sports News</h2>
-            <div id="news-list"></div> <!-- Sports news articles will go here -->
+            <div id="scores">Loading...</div> <!-- Scores will be inserted dynamically here -->
         </section>
 
         <section id="upcoming-events">
             <h2>Upcoming Events</h2>
-            <ul id="event-list"></ul> <!-- List of upcoming sports events -->
+            <ul id="event-list">Loading...</ul> <!-- List of upcoming events -->
+        </section>
+
+        <section id="past-results">
+            <h2>Past Results</h2>
+            <ul id="results-list">Loading...</ul> <!-- List of past results -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Nepali Sports Updates | All rights reserved</p>
+        <p>&copy; Nepali Sports Updates | All rights reserved</p>
     </footer>
 
     <script src="scripts.js"></script>
